monitoring/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: loki
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      name: http
  selector:
    app: grafana
